--- a/src/components/Etudiants/components/InputForm/style.scss
+++ b/src/components/Etudiants/components/InputForm/style.scss
@@ -1,12 +1,22 @@
 .containerInput {
   & > :nth-child(2) {
-    border: 1px solid black;
+    border: 1px solid rgb(172, 172, 172);
     display: flex;
     align-items: center;
-    
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    span{
+      justify-self: end;
+    }
   }
   input {
-    width: 95%;
     border: none;
+    outline: none;
+  }
+
+  select{
+    outline: none;
+    width: 100%;
   }
 }
