--- a/src/components/Enseignants/components/DetailsEnseignants/style.scss
+++ b/src/components/Enseignants/components/DetailsEnseignants/style.scss
@@ -1,11 +1,39 @@
 .eleveLink{
     text-decoration: none;
     color: black;
+    position: inherit;
     tr{
         transition: all ease 0.3s;
 
         &:hover{
             background-color: rgba(196, 196, 196, 0.452);
+        }
+    }
+    .popDelete{
+        position: absolute;
+        height: 100vh;
+        width: 100vw;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.274);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &>:nth-child(1){
+            display: grid;
+            background-color: white;
+            font-weight: bold;
+            gap: 10px;
+            border-radius: 8px;
+            padding: 15px;
+            grid-template-columns: 1fr;
+
+            &>:nth-child(2){
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                justify-items: center;
+            }
         }
     }
     .eleveLink-photo{
