--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -10,6 +10,23 @@
 
   & > :nth-child(1) {
     font-size: 1.5em;
+    position: relative;
+
+    .headerContainer-nbre-notif{
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.5em;
+      left: 14px;
+      bottom: 20px;
+      background-color: red;
+      color: white;
+      height: 20px;
+      width: 20px;
+      border-radius: 50%;
+      font-weight: bold;
+    }
   }
   & > :nth-child(2) {
     border: 1px solid rgba(148, 148, 148, 0.63);
